tests/integration/errors/014_content_after_string_variants.nesl
<<<<<<<<<nesl
{
  closing = R"""pv(value)pv""" }
  garbage = R"""pv(value)pv""" extra
  multiple = R"""pv(value)pv""" more stuff
}
=========nesl